--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -18,7 +18,7 @@ When I stumbled across the [CRPG Addict's blog](https://crpgaddict.blogspot.com/
 
 The [Full Game List](https://docs.google.com/spreadsheets/d/1ucULLS34DjNupizmq8j3jDPg0WgIDsvMJAZ_zEcEMyc/edit?usp=sharing) is 364 titles, however I only plan on playing those that are available in English. Any title that can be played using ScummVM likely will be as this facilitates things like keeping track of play time, taking screenshots, managing save states and more.
 
-I don't plan on playing the games in order either, as this might become a bit tedious. I will be starting with Mystery House however as we might as well kick this journey off at the very beginning and see where it takes us from there.
+I don't plan on playing the games in order either, as this might become a bit tedious. I will be starting with Mystery House however as we might as well kick this journey off at the very beginning and see where it takes us from there. I also will only play games in English ... because that's all I can read :P
 
 For a number of the older Sierra Online games there are SCI remakes that replaced the text parser with a point-and-click interface. I may review some of these games twice to cover both experiences, however this likely won't be the norm.
 
@@ -36,7 +36,7 @@ The scoring we'll be using for this series will focus on the following:
 **Story**: Adventure games are very story-driven, and as such the story needs to be evaluated as a top-level criteria. Focus will be on _Quality_, _Immersion_, _Complexity_, _Progression and Pacing_.
 <br>Max Points: **25**
 
-**Experience**: How much _Fun_ was the game? Was the _Difficulty_ too high/low? Were the puzzles a _Challenge_ or were they repetitive and felt derivative and lazy? Was there any introduction for the player or are you dropped in blind.
+**Experience**: How much _Fun_ was the game? Was the _Difficulty_ too high/low? Were the puzzles a _Challenge_ or were they repetitive and felt derivative and lazy? Was there any introduction for the player or are you dropped in blind?
 <br>Max Points: **15**
 
 **Impact**: Did you enjoy the overall experience? Would you play this again? Would you want to know more about this world and its characters in subsequent adventures?
@@ -48,7 +48,7 @@ Each game will be ranked using the above, and a percentage generated from the sc
 
 The games list for this journey is available via [this Google Sheet](https://docs.google.com/spreadsheets/d/1ucULLS34DjNupizmq8j3jDPg0WgIDsvMJAZ_zEcEMyc/edit?usp=sharing), and has been taken from [Wikipedia's List of Graphic Adventure Games](https://en.wikipedia.org/wiki/List_of_graphic_adventure_games). This only includes entries from 1980 through 1999.
 
-1. [Mystery House (On-Line Systems) - 1980]({% post_url 2021-08-03-mystery-house %})
+1. [Mystery House (On-Line Systems)]({% post_url 2021-08-03-mystery-house %})
 1. Wizard and the Princess (On-Line Systems) - 1980
 1. Mission Asteroid (On-Line Systems) - 1980
 1. Cranston Manor (On-Line Systems) - 1981
@@ -58,15 +58,15 @@ The games list for this journey is available via [this Google Sheet](https://doc
 1. Time Zone (On-Line Systems) - 1982
 1. Transylvania (Penguin Software) - 1982
 1. The Dark Crystal (On-Line Systems) - 1983
-1. Star Arthur Legend: Planet Mephius [ja] (T&E Soft) - 1983
-1. Portopia Renzoku Satsujin Jiken (Yuji Horii, Chunsoft) - 1983
+1. ~~Star Arthur Legend: Planet Mephius (T&E Soft) - 1983~~ (_Japanese only_)
+1. ~~Portopia Renzoku Satsujin Jiken (Yuji Horii, Chunsoft) - 1983~~ (_Japanese only_)
 1. Rendezvous with Rama (Telarium) - 1984
 1. Below the Root (Dale Disharoon) - 1984
 1. Dallas Quest (Datasoft) - 1984
-1. Okhotsk ni Kiyu: Hokkaido Rensa Satsujin Jiken (Yuji Horii, Login Software) - 1984
+1. ~~Okhotsk ni Kiyu: Hokkaido Rensa Satsujin Jiken (Yuji Horii, Login Software) - 1984~~ (_Japanese only_)
 1. Princess Tomato in the Salad Kingdom (Hudson Soft) - 1984
-1. Wingman (TamTam) - 1984
-1. King's Quest: Quest for the Crown (Sierra On-Line) - 1984
+1. ~~Wingman (TamTam) - 1984~~ (_Japanese only_)
+1. [King's Quest: Quest for the Crown (Sierra On-Line)]({% post_url 2021-08-06-kings-quest %}) - 1984
 1. The Crimson Crown - Further Adventures in Transylvania (Penguin Software) - 1985
 1. Déjà Vu: A Nightmare Comes True (ICOM Simulations) - 1985
 1. Perry Mason: The Case of the Mandarin Murder (Telarium) - 1985
@@ -81,7 +81,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 1. Space Quest: The Sarien Encounter (Sierra On-Line) - 1986
 1. King's Quest III: To Heir Is Human (Sierra On-Line) - 1986
 1. Suishō no Dragon (Square) - 1986
-1. La Abadía del Crimen (The Abbey of Crime) (Opera Soft) - 1987
+1. ~~La Abadía del Crimen (The Abbey of Crime) (Opera Soft) - 1987~~ (_Spanish only_)
 1. Mortville Manor (Lankhor) - 1987
 1. Police Quest: In Pursuit of the Death Angel (Sierra On-Line) - 1987
 1. Leisure Suit Larry in the Land of the Lounge Lizards (Sierra On-Line) - 1987
